# apertium-bn-en

./: .gitattributes  .gitignore  Makefile.am  README  apertium-bn-en.bn-en.dix  apertium-bn-en.bn.dix  apertium-bn-en.en.dix  configure.ac  example.txt  pending-tests.sh  regression-tests.sh
test/: en-bn-pending-chunker-expected.txt  en-bn-pending-generator-expected.txt  en-bn-pending-generator-gold.txt  en-bn-pending-input.txt  en-bn-pending-interchunk-expected.txt  en-bn-pending-morph-expected.txt  en-bn-pending-postchunk-expected.txt  en-bn-pending-pretransfer-expected.txt  en-bn-pending-tagger-expected.txt  en-bn-regression-chunker-expected.txt  en-bn-regression-generator-expected.txt  en-bn-regression-generator-gold.txt  en-bn-regression-input.txt  en-bn-regression-interchunk-expected.txt  en-bn-regression-morph-expected.txt  en-bn-regression-postchunk-expected.txt  en-bn-regression-tagger-expected.txt  tests.json
